// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should implement random correctly 1`] = `"kQDwwTgWLCbfLzhVrIikgodh6blHlWMNpdjhpAtpSdCiT6X1"`;

exports[`feature-random should implement random correctly 2`] = `"kQDzpalASmg6GxCVJoaCcQgE0LNbEP_8S25k92Pm5wrfbI9J"`;

exports[`feature-random should implement random correctly 3`] = `"kQAG67a2WR_LUH8kGQ6ADymz4gf5brfesdhlcfUhcbNMu_pd"`;

exports[`feature-random should implement random correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQDwwTgWLCbfLzhVrIikgodh6blHlWMNpdjhpAtpSdCiT6X1",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 16195n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDwwTgWLCbfLzhVrIikgodh6blHlWMNpdjhpAtpSdCiT6X1",
            "to": "kQDzpalASmg6GxCVJoaCcQgE0LNbEP_8S25k92Pm5wrfbI9J",
            "type": "internal",
            "value": 9972296000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should implement random correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDwwTgWLCbfLzhVrIikgodh6blHlWMNpdjhpAtpSdCiT6X1",
          "to": "kQDzpalASmg6GxCVJoaCcQgE0LNbEP_8S25k92Pm5wrfbI9J",
          "type": "internal",
          "value": 9972296000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14083n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDzpalASmg6GxCVJoaCcQgE0LNbEP_8S25k92Pm5wrfbI9J",
            "to": "kQAG67a2WR_LUH8kGQ6ADymz4gf5brfesdhlcfUhcbNMu_pd",
            "type": "internal",
            "value": 9949560000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should implement random correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDzpalASmg6GxCVJoaCcQgE0LNbEP_8S25k92Pm5wrfbI9J",
          "to": "kQAG67a2WR_LUH8kGQ6ADymz4gf5brfesdhlcfUhcbNMu_pd",
          "type": "internal",
          "value": 9949560000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14175n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAG67a2WR_LUH8kGQ6ADymz4gf5brfesdhlcfUhcbNMu_pd",
            "to": "kQAG67a2WR_LUH8kGQ6ADymz4gf5brfesdhlcfUhcbNMu_pd",
            "type": "internal",
            "value": 9926724000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAG67a2WR_LUH8kGQ6ADymz4gf5brfesdhlcfUhcbNMu_pd",
          "to": "kQAG67a2WR_LUH8kGQ6ADymz4gf5brfesdhlcfUhcbNMu_pd",
          "type": "internal",
          "value": 9926724000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3219n,
      },
    ],
  },
]
`;
